# BrytecConfigEmbedded

./: BrytecBoard.h  CMakeLists.txt  EBrytecApp.cpp  EBrytecApp.h  EBrytecConfig.h  ENode.cpp  ENode.h  ENodeConnection.h  IOTypes.cpp  IOTypes.h  NodeVariant.cpp  NodeVariant.h  Nodes.cpp  Nodes.h  NodesVector.h
Boards/: ArduinoMegaTest.cpp  ArduinoUnoTest.cpp  BrytecBoard.h  BrytecPowerModuleV1.cpp  DesktopSimulation.cpp
Can/: Can bus message definitions.ods  EBrytecCan.cpp  EBrytecCan.h  ECanBus.cpp  ECanBus.h  ECanCommandQueue.cpp  ECanCommandQueue.h  ECanHolleyBroadcastQueue.cpp  ECanHolleyBroadcastQueue.h  ECustomCanQueue.cpp  ECustomCanQueue.h  EPinStatusQueue.cpp  EPinStatusQueue.h
Deserializer/: ArduinoProgmemDeserializer.cpp  BinaryArrayDeserializer.cpp  BinaryArrayDeserializer.h  BinaryAvrEepromDeserializer.cpp  BinaryAvrEepromDeserializer.h  BinaryBufferSerializer.cpp  BinaryBufferSerializer.h  BinaryDeserializer.cpp  BinaryDeserializer.h  BinaryPathDeserializer.cpp  BinaryPathDeserializer.h  BinaryProgmemDeserializer.cpp  BinaryProgmemDeserializer.h  Program.h
Nodes/: EAndNode.cpp  EAndNode.h  ECanBusInputNode.cpp  ECanBusInputNode.h  ECanBusNode.cpp  ECanBusNode.h  ECanBusOutputNode.cpp  ECanBusOutputNode.h  EChangeNode.cpp  EChangeNode.h  EClampNode.cpp  EClampNode.h  EColorNode.cpp  EColorNode.h  ECompareNode.cpp  ECompareNode.h  EConvertNode.cpp  EConvertNode.h  ECounterNode.cpp  ECounterNode.h  ECurveNode.cpp  ECurveNode.h  EDelayNode.cpp  EDelayNode.h  EDeltaTimeNode.cpp  EDeltaTimeNode.h  EFinalValueNode.cpp  EFinalValueNode.h  EHolleyBroadcastNode.cpp  EHolleyBroadcastNode.h  EHolleyIoModuleNode.cpp  EHolleyIoModuleNode.h  EInitialValueNode.cpp  EInitialValueNode.h  EInterpolateNode.cpp  EInterpolateNode.h  EInvertNode.cpp  EInvertNode.h  EMapValueNode.cpp  EMapValueNode.h  (+30 more)
Usb/: ModuleCommand.cpp  ModuleCommand.h  UsbBuffer.cpp  UsbBuffer.h  UsbDefs.cpp  UsbDefs.h
Utils/: BinaryDeserializer.cpp  BinaryDeserializer.h  EBrytecErrors.h  ENodeConnection.h  ENodeDeserializer.cpp  ENodeDeserializer.h  ENodeGroup.cpp  ENodeGroup.h  ENodesVector.h  NodesVector.h  PlacementNew.cpp  PlacementNew.h  RingBuffer.h
